# tower-autoconfig

./: .gitignore  LICENSE  README.md  nextflow.config  pyproject.toml  tower_autoconfig.py
example/: nextflow.config  prerun.sh
src/tower_autoconfig/: agent.py  api.py  autoconfig.py  cli.py  utils.py
